--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="android.xwpeng.testipc">
+    <permission android:name="android.xwpeng.permission.ACCESS_PUSH_SERVICE"
+        android:protectionLevel="normal"/>
+    <uses-permission android:name="android.xwpeng.permission.ACCESS_PUSH_SERVICE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -18,6 +23,7 @@
         <activity
             android:name=".PublicActivity"
             android:process="com.xwpeng.global" />
+        <activity android:name=".NewBookReceiverActivity" />
 
         <service
             android:name=".PushService"
